--- a/Back/DataApi/DataApi/appsettings.json
+++ b/Back/DataApi/DataApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },  
   "PgSql": {
-    "ConnectionString": "Server=sph-pgsql01.spherelab.local;Port=5432;Database=dev_data_management;User Id=data_management_user;Pwd=password;"
+    "ConnectionString": "Server=127.0.0.1;Port=5452;Database=trips;User Id=postgres;Pwd=postgres;"
   },
   "AllowedHosts": "*"
 }
