--- a/Back/DataApi/DataApi/Properties/launchSettings.json
+++ b/Back/DataApi/DataApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7100;http://localhost:5061;https://192.168.0.103:7101;http://192.168.0.103:5062",
+      "applicationUrl": "https://localhost:7100;http://localhost:5061;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
